# pyaquael

./: README.md  aquael.py  build_push.sh  example.py  pyproject.toml  setup.py
examples/: async.py  simple.py
src/pyaquael/: __init__.py  aquael.py
